--- a/index.html
+++ b/index.html
@@ -18,33 +18,32 @@
                     <a href="#online-reputation-management">Online Reputation Management</a>
                 <li>
                     <a href="#social-media-marketing">Social Media Marketing</a>
-                </li>
             </ul>
         </div>
     </header>
-    <div class="hero"></div>
+    <section class="hero"></section>
     <div class="content">
-        <div id="search-engine-optimization" class="main-block">
+        <section id="search-engine-optimization" class="main-block">
             <img alt="search-engine-optimization" src="./assets/images/search-engine-optimization.jpg" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
-        </div>
-        <div id="online-reputation-management" class="main-block">
+        </section>
+        <section id="online-reputation-management" class="main-block">
             <img alt="online-reputation-management" src="./assets/images/online-reputation-management.jpg" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
-        </div>
-        <div id="social-media-marketing" class="main-block">
+        </section>
+        <section id="social-media-marketing" class="main-block">
             <img alt="social-media-marketing" src="./assets/images/social-media-marketing.jpg" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
-        </div>
+        </section>
     </div>
     <div class="benefits">
         <div class="benefit">
